# hydra

./: Cargo.toml
src/: auth.rs  crypto.rs  lib.rs  main.rs  spec.rs
src/helpers/: helpers.rs  mod.rs  mysql_helpers.rs
