[package]
name = "hydra"	
version = "0.1.0"
authors = ["Lily Tsai <tslilyai@mit.edu>"]
edition = "2018"
exclude = ["tests/testdata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
log = "0.4.0"
env_logger = "0.8.4"
hex = "0.4.2"
mysql = "23.0.1"
mysql_common = "0.29.2"
msql-srv = "0.9.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
rand = "0.8.5"
ordered-float = "2.0"
time = "0.2.7"
tokio = { version = "1.6.1", features = ["full"] }
hex-literal = "0.3.3"
flame = { version = "0.2.2", optional=true }
flamer = { version = "0.3", optional=true }
crypto_box = "0.7.2"
primitive-types = "0.11.1"
bigint = "4.4.3"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-primes = "0.2.0"
pbkdf2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
fast_paths = "0.2.0"

[dev-dependencies]
datadriven = "0.1.0"

[[bin]]
name = "hydra-tester"
path = "src/main.rs"
doc = false
